--- a/service/build.gradle
+++ b/service/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     compile group: 'ru.odnoklassniki', name: 'one-nio', version: '1.0.1'
     compile group: 'com.intellij', name: 'annotations', version: '12.0'
+    compile 'org.apache.commons:commons-io:1.3.2'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
