--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile group: 'com.intellij', name: 'annotations', version: '12.0'
     compile 'org.apache.commons:commons-io:1.3.2'
 
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
