--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -17,4 +17,15 @@ dependencies {
 // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     compile group: 'com.intellij', name: 'annotations', version: '12.0'
+}
+
+task getJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Console client',
+                'Implementation-Version': version,
+                'Main-Class': 'com.yadro.CliApp'
+    }
+    baseName = 'cli'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
